cmake_minimum_required(VERSION 3.28)
project(testTime)

set(CMAKE_CXX_STANDARD 17)

add_executable(testTime main.cpp
        bubbleSort.h
        linearSearch.h
        binarySearch.h
        selectionSort.h
        mergeSort.h
        mergeSort.h
        quickSort.h
        quickSort.h
        insertionSort.h
        insertionSort.h
        stacks.h
        queues.h
        linkedList.h
        linkedList.cpp
        queues.cpp
        stacks.cpp
        dijkstra.h
        avlTree.h
        BFS.h)
